--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,22 @@
 .App {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   border: 1px white solid;
+  border-radius: 1rem;
+  width: fit-content;
+  padding: 20px;
+  margin: 20px;
+  gap: 10px;
+  align-items: center;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.title {
+  font-size: 1.6rem;
 }
