--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,32 @@
 .App {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   text-align: center;
   border: 1px white solid;
   border-radius: 1rem;
-  width: fit-content;
+  width: calc(100vw - 140px);
   padding: 20px;
-  margin: 20px;
+  margin: 50px;
   gap: 10px;
   align-items: center;
 }
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
+  width: 90%;
+  grid-template-columns: repeat(6, minmax(100px, 6fr));
+  gap: 20px;
+  min-width: 1100px;
 }
 
 .title {
   font-size: 1.6rem;
+  padding-bottom: 10px;
+}
+
+img {
+  /* width: 50px; */
+  width: 100%;
+  border-radius: 0.2rem;
 }
